img/HW_2.3/depl_nginx_configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-nginx-conf
  labels:
    app: depl-nginx-conf
spec:
  selector:
    matchLabels:
      app: depl-nginx-conf
  template:
    metadata:
      labels:
        app: depl-nginx-conf
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: nginx-html
          mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
      volumes:
      - name: nginx-html
        configMap:
          name: nginx-html
