img/HW_2.3/svc_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: depl-nginx-conf
  ports:
    - port: 80
      targetPort: 80
